meet our team section listo con estilos terminados

--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
         </section>
         <!-- SECTION FRASE -->
         <section id="frase">
-            <div class="container">
+            <div class="container text-center">
                 <div class="row">
-                    <div class="col-md-12 col-xs-12">
-                        <p>truly</p>
+                    <div class="col-md-offset-2 col-md-8 col-xs-12">
+                        <p>Truly great food is a combination of quality ingredients, creativity, and attention to detail.</p>
                         <p class="rayita"></p>
                         <p class="rayita"></p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="text-center">
-                        <button class="btn">MEET OUR TEAM</button>
+                        <button class="btn btn-default">MEET OUR TEAM</button>
                     </div>
                 </div>
             </div>
