--- a/index.html
+++ b/index.html
@@ -143,16 +143,159 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-xs-12 text-center parrafocreate">
-                        <p>We create flavorsome, traditional dishes using fresh, local ingredients.</p>
+                        <p>We are group of proffesionals and artisan chefs with a pasion for culinary excellence.</p>
                         <p class="rayita"></p>
                         <p class="rayita"></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-xs-12">
-                        
+                    <div class='col-md-12 col-xs-12'>
+                        <div class="carousel slide media-carousel" id="media">
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-1.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">ALANA WINBLEDON</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Owner</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 hidden-xs">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-2.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">JEFFERY HOWARD</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Executive Chef</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 hidden-xs">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-3.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">KENNY WILLIAMS</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Executive Chef</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-4.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">ALANA WINBLEDON</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Owner</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 hidden-xs">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-5.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">JEFFERY HOWARD</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Executive Chef</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 hidden-xs">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-6.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">KENNY WILLIAMS</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Executive Chef</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-7.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">ALANA WINBLEDON</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Owner</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 hidden-xs">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-8.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">JEFFERY HOWARD</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Executive Chef</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 hidden-xs">
+                                            <a class="thumbnail" href="#"><img alt="" src="assets/img/people-9.jpg"></a>
+                                            <div class="carousel-caption">
+                                                <h2 class="robototypes">KENNY WILLIAMS</h2>
+                                                <p class="rayita"></p>
+                                                <p class="rayita"></p>
+                                                <p>Executive Chef</p>
+                                                <p class="social-icons">
+                                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                                    <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a data-slide="prev" href="#media" class="left carousel-control">‹</a>
+                            <a data-slide="next" href="#media" class="right carousel-control">›</a>
+                        </div>
                     </div>
-               </div>
+                </div>
             </div>
         </section>
         <!-- SECTION PRESS -->
@@ -167,14 +310,70 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-xs-12 text-center parrafocreate">
-                        <p>We create flavorsome, traditional dishes using fresh, local ingredients.</p>
+                        <p>Here's what the critics are saying.</p>
                     </div>
                 </div>
+
                 <div class="row">
-                    <div class="col-md-4 col-xs-12">
-                        
+                    <div class="col-md-12" data-wow-delay="0.2s">
+                        <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+                            <!-- Bottom Carousel Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
+                                </li>
+                                <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
+                                </li>
+                                <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
+                                </li>
+                            </ol>
+
+                            <!-- Carousel Slides / Quotes -->
+                            <div class="carousel-inner text-center">
+
+                                <!-- Quote 1 -->
+                                <div class="item active">
+                                    <blockquote>
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. !</p>
+                                                <small>Someone famous</small>
+                                            </div>
+                                        </div>
+                                    </blockquote>
+                                </div>
+                                <!-- Quote 2 -->
+                                <div class="item">
+                                    <blockquote>
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                                                <small>Someone famous</small>
+                                            </div>
+                                        </div>
+                                    </blockquote>
+                                </div>
+                                <!-- Quote 3 -->
+                                <div class="item">
+                                    <blockquote>
+                                        <div class="row">
+                                            <div class="col-sm-8 col-sm-offset-2">
+
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. .</p>
+                                                <small>Someone famous</small>
+                                            </div>
+                                        </div>
+                                    </blockquote>
+                                </div>
+                            </div>
+
+                            <!-- Carousel Buttons Next/Prev -->
+                            <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
+                            <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
+                        </div>
                     </div>
-               </div>
+                </div>
             </div>
         </section>
         <!-- SECTION MENU -->
@@ -211,5 +410,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- CDN Bootstrap JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
