--- a/index.html
+++ b/index.html
@@ -398,6 +398,15 @@
                </div>
             </div>
         </section>
+        <section id="pre-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 text-center">
+                        <p>Buy Vitality Now!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer>
             <div class="container">
                 <div class="row">
