--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
                         <div class="carousel slide" data-ride="carousel" id="quote-carousel">
                             <!-- Bottom Carousel Indicators -->
                             <ol class="carousel-indicators">
-                                <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
+                                <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="assets/img/testimonial_1.jpg" alt="">
                                 </li>
-                                <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
+                                <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="assets/img/testimonial_2.jpg" alt="">
                                 </li>
                                 <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
                                 </li>
